# NReal

./: IMPLEMENTATION_SUMMARY.md  MOBILE_TRANSLATION_FLOW.md  README.md  SUPABASE_RLS_FIX.md  TRANSLATION_ARCHITECTURE_FIX.md  buildprompt.md  database_setup.sql  fix_room_rls.sql  frontendbuild.md  livekit.md
agent_ui/: .env  README.md  (+4 more)
backend/: .env.example  .gitignore  LIVEKIT_AGENTSESSION_README.md  README.md  REALTIME_TRANSLATION_README.md  debug_translation_flow.py  docker-compose.yml  pyproject.toml  requirements.txt  run_worker_only.py  start_services.py  supabase_env_example.txt  test_supabase_connection.py
backend/agents/: README_deepgram_agent.md  README_multilingual.md  SPITCH_INTEGRATION.md  __init__.py  deepgram_multilingual_agent.py  deepgram_voice_config.py  main.py  multilingual_agent.py  test_agent_override.py  voice_config_example.py  worker_entrypoint.py  workflow.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: realtime_translation.py  router.py  translation_rooms.py
backend/app/core/: config.py  dependencies.py  livekit_import.py  workflow_compiler.py
backend/app/db/: models.py
backend/app/db/v1/: models.py
backend/app/models/domain/: profiles.py  rooms.py
backend/app/models/pydantic_/: profiles.py
backend/app/services/: profile_api.py
backend/docker/: Dockerfile.api  Dockerfile.worker
backend/docs/: MULTI_USER_AGENT_COORDINATION.md  REALTIME_TRANSLATION_ARCHITECTURE.md  STT_CONFIGURATION_FIX.md  SUPABASE_README.md  SUPABASE_SETUP.sql  USER_PROFILE_CACHING.md
backend/scripts/: run_api_server.py  run_worker.py
(+42 files in other folders)
