[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translation-service"
version = "1.0.0"
description = "Real-time translation service using LiveKit and AI"
authors = [
    {name = "Translation Service Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "livekit==0.9.0",
    "livekit-agents==0.5.0",
    "livekit-plugins-deepgram==0.3.0",
    "livekit-plugins-elevenlabs==0.4.0",
    "livekit-plugins-openai==0.4.0",
    "livekit-plugins-silero==0.3.0",
    "python-dotenv==1.0.0",
    "dataclasses-json==0.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy==1.7.1",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
